# APPLPy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.agents/skills/applpy/: SKILL.md
.agents/skills/applpy/agents/: openai.yaml
.agents/skills/dockerize-applpy/: SKILL.md
.github/workflows/: ci.yml
applpy/: __init__.py  algebra.py  appl_plot.py  bayes.py  bivariate.py  conversion.py  dist_type.py  moments.py  order_stat.py  queue_dist.py  rust_bindings.py  rv.py  stats.py  stoch.py  timeseries.py  transform.py  types.py
applpy/distributions/: __init__.py
applpy/distributions/continuous/: README.md  __init__.py  arc_sin.py  arc_tan.py  beta.py  bivariate_normal.py  cauchy.py  chi.py  chi_square.py  erlang.py  error.py  error_ii.py  exponential.py  exponential_power.py  extreme_value.py  f.py  gamma.py  generalized_pareto.py  gompertz.py  idb.py  inverse_gamma.py  inverse_gaussian.py  ks.py  la_place.py  log_gamma.py  log_logistic.py  log_normal.py  logistic.py  lomax.py  makeham.py  muth.py  normal.py  param_check.py  pareto.py  rayleigh.py  t.py  triangular.py  uniform.py  weibull.py
applpy/distributions/discrete/: README.md  __init__.py  benford.py  bernoulli.py  binomial.py  geometric.py  poisson.py  uniform_discrete.py
docs/: APPLPy Paper.ipynb  APPLPy_Test.ipynb  CLT Example.ipynb  DTMC 3.ipynb  DTMC.html  DTMC.ipynb  DTMC2.ipynb  NewPlot.ipynb  PlotDist.ipynb  RBD Example.ipynb  examples.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/algorithms/: algebra.rs  conversion.rs  mod.rs  moments.rs  number.rs  order_stat.rs  rv.rs  shared.rs  transform.rs
rust/src/python/: api.rs  conversion.rs  mod.rs
test_applpy/functional/: test_clt_examples.py  test_discrete_time_markov_chain.py  test_notebook_examples.py  test_paper_examples.py  test_reliability_block_diagrams.py
test_applpy/unit/: test_alegra.py  test_appl_plot_module.py  test_bayes_module.py  test_bivariate_module.py  test_conversion.py  test_dist_type.py  test_moments.py  test_order_stat.py  test_queue_dist.py  test_rv.py  test_stats_module.py  test_transform.py
test_applpy/unit/continuous/: test_continuous_distributions.py
test_applpy/unit/discrete/: test_discrete_distributions.py
