[package]
name = "applpy_rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "applpy_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[package.metadata.maturin]
features = ["extension-module"]

[dependencies]
num-rational = "0.4.2"
num-traits = "0.2.19"
pyo3 = { version = "0.22", features = ["abi3-py38", "auto-initialize"] }
statrs = "0.18.0"
